Regression: Console flooded with warnings when fluid type is Domain #101231

Closed
opened 2022-09-20 22:41:17 +02:00 by Marc · 9 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 3.3
Worked: 3.2
Caused by 67e23b4b29

Short description of error
Console flooded with warnings when fluid type is Domain

Exact steps for others to reproduce the error

  • Open default scene
  • Open Console: {nav Window > Toggle System Console}
  • Select cube -> Physics tab -> Fluid
  • Select type Domain
  • Check the console.
  • Now performing any operation (say scale, rotate cube) will print message in console
**System Information** Operating system: Windows 10 **Blender Version** Broken: 3.3 Worked: 3.2 Caused by 67e23b4b29 **Short description of error** Console flooded with warnings when fluid type is Domain **Exact steps for others to reproduce the error** - Open default scene - Open Console: {nav Window > Toggle System Console} - Select cube -> Physics tab -> Fluid - Select type Domain - Check the console. - Now performing any operation (say scale, rotate cube) will print message in console

Added subscriber: @MarcM0

Added subscriber: @MarcM0

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Hi, thanks for the report. Warnings are not particularly due to quick liquid operation. Instead they appear when Fluid type is Domain
I'll search the affecting commit

Hi, thanks for the report. Warnings are not particularly due to quick liquid operation. Instead they appear when Fluid type is `Domain` I'll search the affecting commit
Pratik Borhade changed title from "Unable to delete file" warning with quick liquid python to Console flooded with warnings when fluid type is Domain 2022-09-22 07:24:13 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Introduced in 67e23b4b29
@mano-wii ^

Introduced in 67e23b4b29 @mano-wii ^
Germano Cavalcante was assigned by Pratik Borhade 2022-09-27 06:16:59 +02:00
Pratik Borhade changed title from Console flooded with warnings when fluid type is Domain to Regression: Console flooded with warnings when fluid type is Domain 2022-09-27 06:17:09 +02:00

This issue was referenced by 6c3364052b

This issue was referenced by 6c3364052b78b4e61586b30ebb1d6c15e3065a93

This issue was referenced by 715c86d9e5

This issue was referenced by 715c86d9e58f44ed078dd61c1fed45739bf65723

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101231
There is no content yet.