source/blender/blenlib/intern/BLI_filelist.c
@@ -174,10 +174,10 @@ static void bli_builddir(struct BuildDirCtx *dir_ctx, const char *dirname)
         struct direntry *file = &dir_ctx->files[dir_ctx->files_num];
         while (dlink) {
           char fullname[PATH_MAX];
+          BLI_join_dirfile(fullname, sizeof(fullname), dirname, dlink->name);
           memset(file, 0, sizeof(struct direntry));
           file->relname = dlink->name;
-          file->path = BLI_strdupcat(dirname, dlink->name);
-          BLI_join_dirfile(fullname, sizeof(fullname), dirname, dlink->name);
+          file->path = BLI_strdup(fullname);
           if (BLI_stat(fullname, &file->s) != -1) {
             file->type = file->s.st_mode;
           }
